--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,11 +9,19 @@ services:
     #     REPO: Orcpub
     #     BRANCH: develop
     environment:
+      # Domain or IP address of the site. example.com or 192.168.77.1
+      SERVER-DOMAIN:''
+      # Protocol used. Either 'http://' or 'https://'
+      SERVER-PROTOCOL: 'https://'
       PORT: 8890
       EMAIL_SERVER_URL: ''
       EMAIL_ACCESS_KEY: ''
       EMAIL_SECRET_KEY: ''
       EMAIL_SERVER_PORT: 587
+      # Errors 0 = Off, 1 = On
+      EMAIL_ERRORS: 0
+      # Email address to send errors to
+      EMAIL_ERRORS_TO: ''
       DATOMIC_URL: datomic:free://datomic:4334/orcpub
     depends_on:
       - datomic
