--- a/docker/datomic/Dockerfile
+++ b/docker/datomic/Dockerfile
@@ -1,30 +1,28 @@
 FROM openjdk:8u242-jre
-MAINTAINER daemonsthere@gmail.com
 
 ENV DATOMIC_VERSION 0.9.5703
 
-RUN wget https://my.datomic.com/downloads/free/${DATOMIC_VERSION} -qO /tmp/datomic.zip \
-  && unzip /tmp/datomic.zip \
-  && rm /tmp/datomic.zip \
-  && mv /datomic-free-${DATOMIC_VERSION} /datomic
+ADD ./lib/datomic-free-0.9.5703.zip /tmp/
+
+RUN mv /tmp/datomic-free-0.9.5703 /datomic
+
+#RUN wget https://my.datomic.com/downloads/free/${DATOMIC_VERSION} -qO /tmp/datomic.zip \
+#  && unzip /tmp/datomic.zip \
+#  && rm /tmp/datomic.zip \
+#  && mv /datomic-free-${DATOMIC_VERSION} /datomic
 
 WORKDIR /datomic
 
-RUN cp config/samples/free-transactor-template.properties transactor.properties
-
-RUN sed "s/host=localhost/host=datomic/" -i transactor.properties
-
-RUN sed "s/# storage-access=local/storage-access=remote/" -i transactor.properties
+RUN cp /datomic/config/samples/free-transactor-template.properties /datomic/config/transactor.properties
 
 RUN mkdir /data
-RUN sed "s/# data-dir=data/data-dir=\/data/" -i transactor.properties
+RUN sed "s/# data-dir=data/data-dir=\/data/" -i /datomic/config/transactor.properties
 
 RUN mkdir /log
-RUN sed "s/# log-dir=log/log-dir=\/log/" -i transactor.properties
+RUN sed "s/# log-dir=log/log-dir=\/log/" -i /datomic/config/transactor.properties
 
-ADD deploy/start.sh ./
-RUN chmod +x start.sh
+ADD deploy/start.sh /datomic/
+RUN chmod +x /datomic/start.sh
 
 #EXPOSE 4334 4335 4336
-
-CMD ["./start.sh"]
+CMD ["/datomic/start.sh"]
